# ChaturGPT-Multilingual-Document-Q-A-App

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTIRBUTING.md  LICENCE  README.md  app.py  pyproject.toml  replacements.txt  requirements.txt  reset_collection.py  test_sarvam_api.py
.gitlab/issue_templates/: bug.md
.gitlab/merge_request_templates/: default.md
chat_cache/: cache.db  cache.db-shm  cache.db-wal
chaturgpt_db/: chroma.sqlite3
chroma_store/: chroma.sqlite3
docs/: user-acquisition.md
